--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
+attrs==21.4.0
+bcrypt==3.2.0
 click==8.0.4
 Flask==2.0.3
+flask-expects-json==1.7.0
+Flask-Bcrypt==0.7.1
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
 itsdangerous==2.1.1
 Jinja2==3.0.3
+jsonschema==4.4.0
 MarkupSafe==2.1.1
 psycopg2-binary==2.9.3
+PyJWT==2.3.0
+pyrsistent==0.18.1
+python-dotenv==0.19.2
 SQLAlchemy==1.4.32
 Werkzeug==2.0.3
